<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dividercolor"
    tools:context=".ui.Signup">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="126dp"
        android:layout_height="134dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/yellowcircle"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="153dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:background="@drawable/bluecircle"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="158dp"
        android:layout_height="145dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/redcircle"
        android:elevation="10dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="249dp"
        android:layout_height="145dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/days_one"
        android:text="Sign in"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/"
        android:text="@string/signindisc"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <android.support.design.card.MaterialCardView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardelevation"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

    <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="beginning"
         >
        <com.hbb20.CountryCodePicker

            android:id="@+id/codeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            app:ccp_countryPreference="PK,US,UK"
            app:ccp_autoDetectCountry="true"
            app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"/>


        <android.support.design.widget.TextInputLayout

            android:id="@+id/phoneNum"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="Phone number"
            app:counterEnabled="true"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/codeSpinner"
                android:layout_gravity="center"
                android:layout_weight="7.5"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="12sp"
                android:visibility="visible"
                tools:fontFamily="sans-serif" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/sendBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/carrot"
            android:text="@string/sendverification"
            app:cornerRadius="5dp" />


        <android.support.design.button.MaterialButton
            android:id="@+id/btnEmail"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:enabled="true"
            android:text="email"
            android:visibility="invisible"
            app:cornerRadius="5dp" />
       </LinearLayout>

    </android.support.design.card.MaterialCardView>
    </android.support.constraint.ConstraintLayout>

