<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/dividercolor"
    android:layout_height="match_parent"
    tools:context=".ui.Authentication">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="126dp"
        android:layout_height="134dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/yellowcircle"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="153dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:background="@drawable/bluecircle"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="158dp"
        android:layout_height="145dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/redcircle"
        android:elevation="10dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="249dp"
        android:layout_height="145dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/days_one"
        android:text="Sign in"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:textSize="12dp"
        android:text="@string/signupdirections"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <android.support.design.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout

                android:id="@+id/code"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/code"
                app:errorEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="123456"
                    android:inputType="number"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:visibility="visible"
                    tools:fontFamily="sans-serif"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="295dp"

                    />


            </android.support.design.widget.TextInputLayout>


            <android.support.design.button.MaterialButton
                android:id="@+id/verificationBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/carrot"
                android:text="@string/verify"
                app:cornerRadius="5dp" />

        </LinearLayout>
    </android.support.design.card.MaterialCardView>


    <ProgressBar
        android:id="@+id/phoneBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneBar">

        <android.support.design.button.MaterialButton
            android:id="@+id/btnResend"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:enabled="false"
            android:visibility="gone"
            android:text="resend"
            android:textSize="12dp"
            app:cornerRadius="5dp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/btnChangeNumber"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:enabled="false"
            android:visibility="gone"
            android:gravity="center"
            android:text="change number"
            android:textSize="12dp"
            app:cornerRadius="5dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>